--- a/news-portal.html
+++ b/news-portal.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bangla News-24</title>
+    <title>News-24</title>
     <!-- css stylesheet  -->
     <link rel="stylesheet" href="css/news-style.css">
     <!-- daisy ui and tailwind css  -->
@@ -14,9 +14,36 @@
 </head>
 
 <body>
+    <header>
+        <section class="container mx-auto">
+            <div class="navbar pt-0">
+                <div class="flex-1">
+                    <h2 class="text-indigo-600"><span class="bg-indigo-600 text-white rounded">News</span>-24</h2>
+                </div>
+                <div class="flex-none">
+                    <ul class="menu-horizontal p-0 gap-4">
+                        <li><a>Home</a></li>
+                        <li><a>News</a></li>
+                        <li><a>Blog</a></li>
+                    </ul>
+                </div>
+                <label tabindex="0" class="btn btn-ghost btn-circle avata">
+                    <div class="w-10 rounded-full">
+                        <img src="img/Avatar.png" />
+                    </div>
+                </label>
+            </div>
+            </div>
+        </section>
+
+        <section class="container mx-auto">
+            <hr>
+        </section>
+    </header>
 
 
-    
+
+
 
 
 
