--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- daisy ui and tailwind css  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.33.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
@@ -42,12 +43,19 @@
     <main>
         <section>
             <div class="container mx-auto ">
-                <ul id="category" class="text-gray-500 w-full menu menu-horizontal gap-4 flex justify-between p-5">
+                <ul id="category"
+                    class="category-news text-gray-500 w-full menu menu-horizontal gap-4 flex justify-between p-5">
                     <li>Home</li>
                 </ul>
             </div>
         </section>
-        
+        <!-- news show category  -->
+        <section class="container mx-auto">
+            <div id="category-news" class="m-5">
+
+            </div>
+        </section>
+
 
     </main>
 
