--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
             <div class="container mx-auto ">
                 <ul id="category"
                     class="category-news text-gray-500 w-full menu menu-horizontal gap-4 flex justify-between p-5">
-                    <li>Home</li>
+                    <li onclick="displayNewsDetails(users)" id="" class="">Home</li>
                 </ul>
+            </div>
+        </section>
+        <!-- Home container  -->
+        <section>
+            <div id="home-container">
+
             </div>
         </section>
         <!-- news show category  -->
@@ -55,15 +61,21 @@
 
             </div>
         </section>
+        <!-- news modal section  -->
+        <section>
+            <div class="containerDiv">
+
+            </div>
+        </section>
 
 
     </main>
-
-
-
-
-
-
+    <footer>
+        <section>
+            <p class="text-center pb-8 pt-3">Copyright 2022 <span class="bg-indigo-600 text-white rounded">News</span><span
+                    class="text-indigo-600">-24</span></p>
+        </section>
+    </footer>
 
     <script src="js/index.js"></script>
 </body>
