--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 </div>
                 <div class="flex-none">
                     <ul class="menu-horizontal gap-4">
-                        <li><a>Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a>News</a></li>
-                        <li><a>Blog</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                 <label tabindex="0" class="btn btn-ghost btn-circle avata">
@@ -68,12 +68,12 @@
             </div>
         </section>
 
-
     </main>
+
     <footer>
         <section>
-            <p class="text-center pb-8 pt-3">Copyright 2022 <span class="bg-indigo-600 text-white rounded">News</span><span
-                    class="text-indigo-600">-24</span></p>
+            <p class="text-center pb-8 pt-3">Copyright 2022 <span
+                    class="bg-indigo-600 text-white rounded">News</span><span class="text-indigo-600">-24</span></p>
         </section>
     </footer>
 
