--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
         </section>
     </header>
 
+
+
     <!-- news category section  -->
     <main>
         <section>
             <div class="container mx-auto ">
                 <ul id="category"
                     class="category-news text-gray-500 w-full menu menu-horizontal gap-4 flex justify-between p-5">
-                    <li onclick="displayNewsDetails()" id="home-container" class="">Home</li>
+                    <li onclick="displayNewsDetails()" class="btn rounded-lg bg-violet-400 p-4" id="home">Home</li>
                 </ul>
             </div>
         </section>
@@ -59,23 +61,9 @@
         <!-- not found  -->
         <section>
             <div id="no-found" class="hidden">
-                <h2 class="text-center text-orange-500 text-2xl">No Found, Please try again!</h2>
+                <h3 class="text-orange-500 text-center text-2xl">No Found. Please try again!</h3>
             </div>
         </section>
-
-        <!-- news found  -->
-        <section>
-            <div id="found-news">
-                <h2 class="pl-20 text-orange-400 text-xl">4 News Found </h2>
-            </div>
-        </section>
-
-        <!-- Home container  -->
-        <!-- <section class="container mx-auto">
-            <div id="home-container">
-
-            </div>
-        </section> -->
 
         <!-- news show category  -->
         <section class="container mx-auto">
@@ -83,6 +71,10 @@
 
             </div>
         </section>
+
+
+
+
 
         <!-- news modal section  -->
         <section>
