--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <label tabindex="0" class="btn btn-ghost btn-circle avata">
                     <div class="w-10 rounded-full">
-                        <img src="img/Avatar.png" />
+                        <img src="image/Avatar.png" />
                     </div>
                 </label>
             </div>
